@@ -1,7 +1,7 @@
 <ws-modal *ngIf="isOpened" [(isOpened)]="isOpened" [isCloseIconDisplayed]="false" [maxWidth]="700">
     <form modalBody [formGroup]="form">
         <mat-select class="form-control form-control-sm mb-3 border-0 float-right status-container" style="width: 150px; padding-top: .35rem" placeholder="Status" formControlName="status" [ngClass]="'status-container-' + form.controls['status'].value" (selectionChange)="updateInvoiceStatus($event.value)">
-            <mat-option [value]="'new'" *ngIf="(!item || item.status == 'new' || item.status == 'paid' || item.status == 'completed' || item.status == 'refunded' || item.status == 'cancelled') || (!form.controls['isCompletedChecked'].value)">New</mat-option>
+            <mat-option [value]="'new'" *ngIf="(item && (item.status == 'new' || item.status == 'paid' || item.status == 'completed' || item.status == 'refunded' || item.status == 'cancelled') && !form.controls['isCompletedChecked'].value) || (!item && !form.controls['isCompletedChecked'].value)">New</mat-option>
             <mat-option [value]="'paid'" *ngIf="item && (item.status == 'paid' || item.status == 'in_progress') && !form.controls['isCompletedChecked'].value">Paid</mat-option>
             <mat-option [value]="'in_progress'" *ngIf="item && (item.status == 'paid' || item.status == 'in_progress' || item.status == 'delivered') && !form.controls['isCompletedChecked'].value">In Progress</mat-option>
             <mat-option [value]="'delivered'" *ngIf="item && (item.status == 'in_progress' || item.status == 'delivered') && !form.controls['isCompletedChecked'].value">Delivered</mat-option>
@@ -25,7 +25,7 @@
             <div class="my-2" *ngIf="item || form.controls['isCompletedChecked'].value">
                 <label id="paymentMethod" class="mb-0 font-9">Payment Method:</label>
                 <mat-select for="paymentMethod" style="max-width: 200px" class="form-control form-control-sm mb-2 d-block" formControlName="paymentMethod">
-                    <mat-option [value]="''"></mat-option>
+                    <mat-option [value]="''">No payment</mat-option>
                     <mat-option [value]="'cash'">Cash</mat-option>
                     <mat-option [value]="'bank_in'">Bank In</mat-option>
                     <mat-option [value]="'cod'">Cash on delivery</mat-option>
@@ -183,8 +183,8 @@
         <div class="mb-3">
             <h5 class="h6">ETA {{ form.controls.deliveryOption.value == 'delivery' ? 'Delivery' : 'Pick-up'}} Date</h5>
             <div class="row no-gutters">
-                <input (click)="fromPicker.open()" placeholder="Date" [min]="todayDate" formControlName="etaDate" class="form-control form-control-sm mb-2 mr-2" style="max-width: 200px" [matDatepicker]="fromPicker" />
-                <mat-datepicker #fromPicker startView="month" [startAt]="todayDate"></mat-datepicker>
+                <input (click)="fromPicker.open()" placeholder="Date" [min]="form.controls['isCompletedChecked'].value ? '': todayDate" formControlName="etaDate" class="form-control form-control-sm mb-2 mr-2" style="max-width: 200px" [matDatepicker]="fromPicker" />
+                <mat-datepicker #fromPicker startView="month" [startAt]="form.controls['isCompletedChecked'].value ? '': todayDate"></mat-datepicker>
                 <div class="input-group" style="width: 150px">
                     <mat-select class="form-control form-control-sm" placeholder="HH" formControlName="etaDateTimeHour">
                         <mat-option [value]="''">HH</mat-option>
