@@ -7,6 +7,7 @@
 - 2021-01-31                                -
 ---------------------------------------------
 .: WSM: BugFix: Update UI in item list (WSM-286)
+.: WSM: Task: Able to add history invoice (WSM-297)
 
 ---------------------------------------------
 - 2021-01-30                                -
